--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <label for="password">Contraseña</label>
       <input type="password" id="password" name="password" formControlName="password">
     </div>
-    <button type="submit">Ingresar</button>
+    <button type="submit" appLoader>
+      Ingresar</button>
   </form>
 </div>
